# yosys-isim

./: .gitignore  Cargo.toml  README.MD
doc/: gate-level-cells.MD  word-level-cells.MD
yosys_isim/: Cargo.toml
yosys_isim/src/: lib.rs  model.rs  ops.rs
yosys_isim/src/common/: buffer.rs  collections.rs  error.rs  has_name.rs  macros.rs  mod.rs
yosys_isim/src/json/: connection.rs  json.rs  mod.rs  parser.rs
yosys_isim/src/macros/: define_enum.rs  mod.rs
yosys_isim/src/model/: cell.rs  edge.rs  logic.rs  mod.rs  module.rs  port.rs  wires.rs
yosys_isim/src/sim/: cell.rs  edge.rs  logic.rs  mod.rs  ops.rs  port.rs  sim.rs  sim_cell.rs  sim_port.rs
yosys_isim/src/sim/fns/: binary.rs  mod.rs  ternary.rs  unary.rs
yosys_isim_logic/: Cargo.toml  asm.sh  notes.txt
yosys_isim_logic/src/: lib.rs  logic.rs  logic_array64.rs  logic_slice.rs  logic_vec.rs  ops.rs  simd.rs  tests.rs
yosys_isim_macros/: Cargo.toml
yosys_isim_macros/src/: lib.rs
yosys_isim_napi/: .gitignore  Cargo.toml  package-lock.json  package.json  sandbox-netlist.json  sandbox.ts
yosys_isim_napi/npm/darwin-x64/: README.md  package.json
yosys_isim_napi/npm/linux-x64-gnu/: README.md  package.json
yosys_isim_napi/npm/win32-x64-msvc/: README.md  package.json
yosys_isim_napi/src/: error.rs  lib.rs
yosys_isim_test/: Cargo.toml
yosys_isim_test/src/: lib.rs  test_bit_mem.rs  test_bit_mem.sv  test_gates.rs  test_gates.sv
yosys_isim_test/src/util/: assert.rs  compile_sv.rs  mod.rs
